# PatchContext

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  RUN_TUNNEL.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/index/: metadata.parquet  stats.json
scripts/: deploy_cloudrun.sh  fix_macos_libomp.py  run_ingestion.py  serve_public.sh  smoke_test.py
src/patchcontext/: __init__.py  config.py  inference.py  pipeline.py  ui_helpers.py
src/patchcontext/eval/: __init__.py  benchmark.jsonl  run_ragas.py
src/patchcontext/eval/results/: ragas_20260712_2019.json
src/patchcontext/generate/: __init__.py  llm_client.py  prompts.py
src/patchcontext/guard/: __init__.py  nli_guard.py  ref_validator.py
src/patchcontext/index/: __init__.py  build_index.py  chunker.py  embedder.py
src/patchcontext/ingest/: __init__.py  fetch_commits.py  fetch_issues.py  fetch_prs.py  github_client.py
src/patchcontext/retrieve/: __init__.py  reranker.py  retriever.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embed_checkpoints.py  test_generate_guard.py  test_imports.py  test_ingest.py  test_retrieve.py  test_run_ragas.py  test_ui_helpers.py
