[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchcontext"
version = "1.0.0"
description = "RAG over the fastapi/fastapi commit/PR/issue history with verified citations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["rag", "retrieval-augmented-generation", "llm", "fastapi", "hallucination-guard"]

[project.urls]
Repository = "https://github.com/sairamsrujan/PatchContext"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
